-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 1.4.0
-
Fix Version/s: 1.5.0
-
Component/s: None
-
Labels:None
-
Code Review:
Commit 86116e4 has surfaced a source of flakiness in raft_consensus-itest where there's no process to resume.
Adar Dembo reported 3 failures in 1000 run with messages like:
Check failed: _s.ok() Bad status: Illegal state: Request to resume '/tmp/run_tha_testp3dlYu/build/debug/bin/kudu-tserver' but the process is not there
The link for the flakiness stats of the raft_consensus-itest:
http://dist-test.cloudera.org:8080/test_drilldown?test_name=raft_consensus-itest