KUDU-2042 fix flakiness in raft_consensus-itest

Fixed flakiness in the raft_consensus-itest test exposed by recent
change 86116e4c515a9c89e728dd699decaf20d097edac.

The source of the flakiness was the race between possible leader
election and calls of GetLeaderReplicaWithRetries() and
GetOnlyLiveFollowerReplicas() methods.

DEBUG build, run with --cpu-stress-threads=8 before the fix:
  http://dist-test.cloudera.org//job?job_id=aserbin.1498102286.18617
    13 out of 2048 failed (0.6% failure rate)

DEBUG build, run with --cpu-stress-threads=8, after the fix:
  http://dist-test.cloudera.org//job?job_id=aserbin.1498103715.1697
    0  out of 2048 failed (0.0% failure rate)

Change-Id: Ia5fb2b82afb15b50659d068ef83d11b7cc291ca9
Reviewed-on: http://gerrit.cloudera.org:8080/7227
Tested-by: Kudu Jenkins
Reviewed-by: Todd Lipcon <todd@apache.org>